# imgsorter

./: CHANGELOG  Cargo.toml  README.md  imgsorter.toml  imgsorter_clean.toml
docs/: todos.yaml
imgsorter/: Cargo.toml  LICENSE  README.md  imgsorter.toml  todos.yaml
imgsorter/docs/: todos.yaml
imgsorter/src/: config.rs  exif.rs  lib.rs  main.rs  utils.rs
imgsorter/test_pics/: sample_video.3gp
src/: config.rs  lib.rs  main.rs  utils.rs
test_pics/: sample_video2.3gp
