[package]
name = "imgsorter"
version = "1.0.0"
authors = ["cristan <13849765+cristan2@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rexif = "0.7.3"
kamadak-exif = "0.5.4"
filesize = "0.2.0"
toml = "0.5.8"